# looking-jobs

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  benchmark.py  config.py  database.py  main.py  parser.py  pyproject.toml  requirements.txt  scraper.py
.github/workflows/: ci.yml
data/: .gitkeep
docs/: .gitkeep
src/: __init__.py
src/applicator/: __init__.py  base.py
src/models/: __init__.py  job.py
src/scraper/: __init__.py  base.py
src/utils/: __init__.py  logger.py
tests/: test_config.py
